# nm-objdump

./: CMakeLists.txt  Makefile  a.out  main.c  my_nm  my_objdump
include/: flags.h  nm.h  objdump.h
src_nm/: check_set_tab.c  main.c  nm32bits.c
src_objdump/: FlagsObjdump.c  Objdump_elf32.c  Print_Flags_Type.c  check_map_data.c  main.c  print_addr.c  read_files.c  verify_header.c
